--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -197,7 +197,7 @@
       <span class="ms-fill"></span>
 
       <button type="button" aria-label="Toggle sidenav" class="btn-exit-app" mat-button (click)="exitApp()">
-        CERRAR SESION
+        <span class="name-exit"> CERRAR SESION </span>
         <mat-icon aria-label="Side nav toggle icon">exit_to_app</mat-icon>
       </button>
     </mat-toolbar>
