--- a/src/app/main/pages/andon/settings/settings.component.scss
+++ b/src/app/main/pages/andon/settings/settings.component.scss
@@ -21,6 +21,11 @@
         color: #000000;
         margin-left: 3.8%;
     }
+
+    &__body{
+        display: flex;
+        
+    }
     &__color-expantion {
         background: #ffffff;
         border: 1px solid #d8d8d8;
@@ -35,7 +40,7 @@
         padding: 0px 30px 0px 30px;
     }
     &__btn-save {
-        margin-left: 10px;
+        margin-left: 50px;
         border: 1px #6200ee solid;
         background: #6200ee;
         color: white;
@@ -57,6 +62,7 @@
     overflow-x: scroll;
     overflow-y: hidden;
     &__content-card {
+        margin-right: 80px;
         width: 400px;
         height: 246px;
         background: #ffffff;
@@ -111,13 +117,226 @@
         }
     }
     &__btn-add{
-     margin: 20px;
+        margin: 20px;
+        border: 1px #6200ee solid;
+        background: white;
+        color: #6200ee;
+        padding: 0px 30px 0px 30px;
     }
     &__btn-save{
         margin-left: 400px;
         margin-top: 10px;
-
+        border: 1px #6200ee solid;
+        background: #6200ee;
+        color: white;
+        padding: 0px 30px 0px 30px;
     }
 
 }
+
+
+/* 
+##Dispositivo = Tablets de baja resolucion y telefnos Mobiles (horizontal)
+##Resolucion = B/w 481px to 767px
+*/
+
+@media (min-width: 481px) and (max-width: 767px) {
+    .container-settings {
+        margin-top: 20px;       
+    
+        &__body{
+            display: flex;    
+            flex-direction: column;                    
+        }
+        &__btn-save{
+            margin-top: 20px;
+        }
+    }
+    .expansion1{
+        width: 50%;
+
+        &__content-card{
+            margin-top: 10px;
+        }
+        &__content-card {
+            margin-right: 80px;
+            height: 246px;
+            background: #ffffff;
+            border: 1px solid #f1eeee;
+            box-sizing: border-box;
+            box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
+            border-radius: 10px;
+            overflow: hidden;
+            overflow-y: scroll;
+            &--header {
+                display: flex;
+                flex-direction: column;
+            }
+        }
+        &__content-card-content {
+            margin-bottom: 20px;
+        }
+    }
+    .form-bahia{
+        margin-top: 30px;
+    }
+    .item-list {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 7px;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 12px;
+        line-height: 15px;
+        /* or 200% */
+    
+        letter-spacing: 0.5px;
+    
+        color: #828282;
+    }
+    .container-form{
+        &__form-array{
+            &--inputs
+            {
+            width: 200px;
+            margin-left: 20px;
+            margin-right: 25px;
+            }
+        }
+        &__btn-add{
+         margin: 20px;
+        }
+        &__btn-save{
+            margin-left: 400px;
+            margin-top: 10px;
+    
+        }
+    
+    }
+
+    .container-form{
+        &__form-array{
+            &--inputs
+            {
+            width: 200px;
+            margin-left: 20px;
+            margin-right: 25px;
+            }
+        }
+        &__btn-add{
+         margin: 20px;
+        }
+        &__btn-save{
+            margin-left: 200px;
+            margin-top: 10px;
+    
+        }
+    
+    }
+}
+
+/* 
+    ##Dispositivo = Mayoria de telefonos moviles (vertical)
+    ##Resolucion = B/w 320px to 479px
+  */
+
+@media (min-width: 320px) and (max-width: 480px) {
+    
+    .container-settings {
+        margin-top: 20px;       
+    
+        &__body{
+            display: flex;    
+            flex-direction: column;                    
+        }
+        &__btn-save{
+            margin-top: 20px;
+        }
+    }
+    .container-expansion1 {
+        width: 60%;
+        background: #ffffff;
+        border: 1px solid #f1eeee;
+        box-sizing: border-box;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 10px;
+        overflow-x: scroll;
+        overflow-y: hidden;
+        &__content-card {
+            margin-right: 0px;
+            width: 250px;
+            height: 246px;
+            background: #ffffff;
+            border: 1px solid #f1eeee;
+            box-sizing: border-box;
+            box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
+            border-radius: 10px;
+            overflow: hidden;
+            overflow-y: scroll;
+            &--header {
+                display: flex;
+                flex-direction: column;
+            }
+        }
+        &__content-card-content {
+            margin-bottom: 20px;
+        }
+    }
+
+    .form-bahia{
+        margin-top: 30px;
+    }
+    .item-list {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 7px;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 12px;
+        line-height: 15px;
+        /* or 200% */
+    
+        letter-spacing: 0.5px;
+    
+        color: #828282;
+    }
+
+    .btn-delete{
+        margin-top: 0px;
+        margin-left: 30px;
+        margin-bottom: 50px;
+        padding-top: 0px;
+    }
+
+    .container-form{
+        &__form-array{
+            &--inputs
+            {
+            width: 200px;
+            margin-left: 20px;
+            margin-right: 25px;
+            }
+        }
+        &__btn-add{
+         margin: 20px;
+        }
+        &__btn-save{
+            margin-left: 100px;
+            margin-top: 10px;
+    
+        }
+    
+    }
+
+    
+}
+
 
