--- a/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.html
+++ b/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.html
@@ -1,19 +1,21 @@
 <div class="container" [ngStyle]="containerStyle">
     <div class="header-container">
         <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 2.5em;">radio_button_checked</mat-icon>
-        <h1 style="font-size: 2.2em; margin-left: 20px; font-family: 'Poppins', sans-serif; font-weight: 700;">Reportar</h1>              
+        <h1 style="font-size: 2.2em; margin-left: 20px; font-family: 'Poppins', sans-serif; font-weight: 700;">Reportar
+        </h1>
     </div>
     <mat-divider></mat-divider>
     <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
 
     <div class="body-container">
         <div class="report" [ngStyle]="reportStyle">
-            <form action="" [formGroup]="reportForm" autocomplete="off" class="report__form" >
+            <form action="" [formGroup]="reportForm" autocomplete="off" class="report__form">
                 <p style="margin-left: 0px;">OT CHILD : {{otChild ? otChild : '---'}} </p>
-                <mat-form-field appearance="outline" id="result" class="report__form--input"> 
+                <mat-form-field appearance="outline" id="result" class="report__form--input">
                     <mat-label>Tipo de problema</mat-label>
-                    <mat-select   formControlName="problemType">
-                        <mat-option *ngFor="let item of typeProblem$ | async" [value]="item.problemType">{{item.problemType}}</mat-option>
+                    <mat-select formControlName="problemType">
+                        <mat-option *ngFor="let item of typeProblem$ | async" [value]="item.problemType">
+                            {{item.problemType}}</mat-option>
                     </mat-select>
                     <mat-hint *ngIf="!(typeProblem$ | async)">
                         <mat-progress-bar mode="indeterminate"></mat-progress-bar>
@@ -23,8 +25,8 @@
                         Campo <strong>requerido.</strong>
                     </mat-error>
                 </mat-form-field>
-                <br/>
-                <mat-form-field appearance="outline" id="result" class="report__form--input"> 
+                <br />
+                <mat-form-field appearance="outline" id="result" class="report__form--input">
                     <mat-label>Descripcion</mat-label>
                     <textarea matInput placeholder="Descripcion" formControlName="description">
 
@@ -33,32 +35,32 @@
                         Campo <strong>requerido.</strong>
                     </mat-error>
                 </mat-form-field>
-                    <div class="dropzone" appDropzone (hovered)="toggleHover($event)" (dropped)="onDrop($event)"
-                        [class.hovering]="isHovering">
-                        <p>Arrastrar imágenes</p>
-                        <div class="file">
-                            <label class="file-label">
-                            <input class="file-input" type="file" (change)="onDrop($event.target.files)" >                    
-                              <span class="file-cta">
+                <div class="dropzone" appDropzone (hovered)="toggleHover($event)" (dropped)="onDrop($event)"
+                    [class.hovering]="isHovering">
+                    <p>Arrastrar imágenes</p>
+                    <div class="file">
+                        <label class="file-label">
+                            <input class="file-input" type="file" (change)="onDrop($event.target.files)">
+                            <span class="file-cta">
                                 <span class="file-label">
-                                  Seleccione una imagen
+                                    Seleccione una imagen
                                 </span>
-                              </span>
-                            </label>
-                          </div>
-                        </div>
-                    <h3>Uploads</h3>
+                            </span>
+                        </label>
+                    </div>
+                </div>
+                <h3>Uploads</h3>
 
-                    <div *ngFor="let file of files">
-                        <app-upload-task [file]="file" [pathStorage]="pathStorage" (onNewImage)="addNewImage($event)"> </app-upload-task> 
-                    </div>               
-                
-                <button mat-button type="submit" class="btn" (click)="save()" >
-                   GUARDAR
-                </button >
-                        
+                <div *ngFor="let file of files">
+                    <app-upload-task [file]="file" [pathStorage]="pathStorage" (onNewImage)="addNewImage($event)">
+                    </app-upload-task>
+                </div>
+
+                <button mat-button type="submit" class="btn" (click)="save()">
+                    GUARDAR
+                </button>
+
             </form>
         </div>
     </div>
 </div>
-
