--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import './assets/css/meraki.scss';
+
 /* You can add global styles to this file, and also import other style files */
 .dropzone {
     display: flex;
