:construction: Advance - generate reception

--- a/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.html
+++ b/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.html
@@ -43,7 +43,7 @@
                             <input class="file-input" type="file" (change)="onDrop($event.target.files)">
                             <span class="file-cta">
                                 <span class="file-label">
-                                    Seleccione una imagen
+                                    Seleccione
                                 </span>
                             </span>
                         </label>
