--- a/src/assets/css/meraki.scss
+++ b/src/assets/css/meraki.scss
@@ -1,4 +1,4 @@
-// common styles
+// Common styles
 .ms-fill {
     flex: auto 1 1;
 }
@@ -38,7 +38,7 @@
 
             &--back {
                 margin-right: 12px;
-                
+
                 .mat-icon {
                     height: 36px;
                     width: 36px;
@@ -57,4 +57,87 @@
             }
         }
     }
+}
+
+.ms-button {
+    font-size: 1rem !important;
+    padding: 8px 24px !important;
+    border: 1px solid #6200ee !important;
+    color: #6200ee !important;
+
+    &--icon {
+        margin-right: 8px;
+        vertical-align: middle;
+    }
+}
+
+// Dropzone style
+.dropzone {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    font-weight: 200;
+    height: 300px;
+    border: 2px dashed #6200ee;
+    border-radius: 5px;
+    background: white;
+    margin: 1rem auto;
+}
+
+.dropzone.hovering {
+    border: 2px solid #6200ee;
+    color: #dadada !important;
+}
+
+.dropzone .file-label {
+    font-size: 1.2em;
+}
+progress::-webkit-progress-value {
+    transition: width 0.1s ease;
+}
+
+.file-input {
+    display: none;
+}
+
+.file-cta,
+.file-name {
+    border-color: #dbdbdb;
+    border-radius: 4px;
+    font-size: 1em;
+    white-space: nowrap;
+}
+.file-cta {
+    background-color: #f5f5f5;
+    color: #4a4a4a;
+}
+
+.file-cta,
+.file-name,
+.input {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    align-items: center;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    box-shadow: none;
+    display: inline-flex;
+    font-size: 1rem;
+    height: 2.25em;
+    justify-content: flex-start;
+    line-height: 1.5;
+    padding-bottom: calc(0.375em - 1px);
+    padding-left: calc(0.625em - 1px);
+    padding-right: calc(0.625em - 1px);
+    padding-top: calc(0.375em - 1px);
+    position: relative;
+    vertical-align: top;
+}
+
+.ms-dropzone-grid {
+    display: grid;
+    grid-gap: 8px;
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
 }
