:construction: Advance - generate reception

--- a/src/app/shared/components/zip-task/zip-task.component.scss
+++ b/src/app/shared/components/zip-task/zip-task.component.scss
@@ -12,7 +12,7 @@
     &--selected {
         width: 185px;
         height: 185px;
-        transform: scale(0.9);
+        // transform: scale(0.9);
         border: 15px solid #673ab7;
     }
 
