--- a/src/app/main/pages/initial-evaluations/init-eval-reports/generate-reception/generate-reception.component.html
+++ b/src/app/main/pages/initial-evaluations/init-eval-reports/generate-reception/generate-reception.component.html
@@ -5,6 +5,11 @@
         </button>
 
         <h1 class="ms-toolbar__title">Generar recepción</h1>
+        <span class="ms-fill"></span>
+        <button mat-stroked-button class="ms-toolbar__button" [disabled]="!checkIfImagesSelected()" (click)="generateReport()">
+            <mat-icon>article</mat-icon>
+            GENERAR INFORME
+        </button>
     </div>
     <mat-divider></mat-divider>
 
@@ -28,7 +33,7 @@
     </div>
 
     <div class="ms-dropzone-grid">
-        <app-zip-task *ngFor="let file of files" [file]="file" [pathStorage]="pathStorage"
+        <app-zip-task *ngFor="let file of files" [counter]="imageCounter" [file]="file" [pathStorage]="pathStorage"
             (onNewImage)="addNewImage($event)" style="padding: 10px;">
         </app-zip-task>
     </div>
