--- a/src/assets/css/meraki.scss
+++ b/src/assets/css/meraki.scss
@@ -71,6 +71,30 @@
     }
 }
 
+// Dialog style
+.ms-dialog-header {
+    display: flex;
+    align-items: stretch;
+
+    &__icon {
+        color: #2b2b2b;
+        align-self: center;
+        margin-right: 12px;
+    }
+
+    &__title {
+        color: #2b2b2b;
+        align-self: center;
+        font-family: "Poppins", sans-serif;
+        margin: 0px !important;
+    }
+}
+
+.ms-dialog-info {
+    margin-top: 8px !important;
+    color: dimgrey;
+}
+
 // Dropzone style
 .dropzone {
     display: flex;
