--- a/src/app/shared/components/zip-task/zip-task.component.html
+++ b/src/app/shared/components/zip-task/zip-task.component.html
@@ -1,5 +1,5 @@
-<div>
-    <div class="ms-zip-image" [ngStyle]="zipImage" [ngClass]="selected ? 'ms-zip-image--selected' : ''" (click)="toggleSelection()">
+<div style="position: relative;">
+    <div class="ms-zip-image" [ngStyle]="zipImage" [ngClass]="{'ms-zip-image--selected' : selected, 'ms-zip-image--reception' : reception}" (click)="toggleSelection()">
     </div>
     <div *ngIf="loading$ | async">
         <mat-progress-bar *ngIf="loading$ | async" mode="indeterminate"></mat-progress-bar>
