--- a/src/app/shared/components/zip-task/zip-task.component.scss
+++ b/src/app/shared/components/zip-task/zip-task.component.scss
@@ -12,8 +12,35 @@
     &--selected {
         width: 185px;
         height: 185px;
-        // transform: scale(0.9);
         border: 15px solid #673ab7;
+    }
+
+    &--reception {
+        width: 185px;
+        height: 185px;
+        border: 15px solid #673ab7;
+
+        &::after {
+            content: "RECEPCIÓN";
+            position: absolute;
+            width: 186px;
+            height: 186px;
+            font-size: 1.2rem;
+            font-weight: 700;
+            color: white;
+            font-family: "Poppins";
+            left: -20px;
+            top: 5px;
+            transform: translate(50%, 50%);
+        }
+
+        &::before {
+            content: "";
+            position: absolute;
+            width: 186px;
+            height: 186px;
+            background-color: rgba($color: #000000, $alpha: 0.6);
+        }
     }
 
     &:hover {
