--- a/src/app/main/pages/quality/internal-events/internal-events.component.html
+++ b/src/app/main/pages/quality/internal-events/internal-events.component.html
@@ -107,7 +107,7 @@
                     
                     <div class="container-form__uploadXlx">
                         <h3 class="">Archivo adicional</h3>
-                        <p>ZBI_OPS_ORDSER_MQH (11-52-04).xlsx </p>
+                        <p style="color:#0064EA;">ZBI_OPS_ORDSER_MQH (11-52-04).xlsx </p>
                         <input #fileInput2 style="display: none" type="file" (change)=" onFileSelected($event)" accept=".xls,.xlsx"
                             id="fileInput2">
                             <br>
@@ -121,10 +121,13 @@
                     <button aria-label="add" mat-button class="container-form__btn-save" >
                         GUARDAR
                     </button>
+
+                    
     
                 </form>
             </div>
-
+            <br>
+            <br>
         </mat-card>
         
 
