--- a/src/app/main/pages/initial-evaluations/init-eval-reports/init-eval-reports.component.html
+++ b/src/app/main/pages/initial-evaluations/init-eval-reports/init-eval-reports.component.html
@@ -8,6 +8,11 @@
             <mat-icon>add</mat-icon>
             <span>GENERAR RECEPCIÓN</span>
         </button>
+        <mat-form-field appearance="outline" class="ms-toolbar__search">
+            <mat-label>Buscar</mat-label>
+            <mat-icon matPrefix>search</mat-icon>
+            <input matInput type="text" [formControl]="searchControl" placeholder="Buscar OT" autocomplete="off">
+        </mat-form-field>
     </div>
     <mat-divider></mat-divider>
 
@@ -48,6 +53,14 @@
                     </td>
                 </ng-container>
 
+                <ng-container matColumnDef="createdBy" sticky>
+                    <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Creado por
+                    </th>
+                    <td mat-cell *matCellDef="let element" class="table__cell">
+                        {{element.createdBy ? element.createdBy.name : '---'}}
+                    </td>
+                </ng-container>
+
                 <ng-container matColumnDef="actions" stickyEnd>
                     <th mat-header-cell *matHeaderCellDef class="table__cell">
                         Acciones
@@ -55,7 +68,8 @@
                     <td mat-cell *matCellDef="let element" class="table__cell">
                         <ng-container>
                             <mat-menu #rawMenu="matMenu">
-                                <button class="w3-small" mat-menu-item *ngIf="element.status === 'reception'" routerLink="generate-dispatch" (click)="generateDispatch(element)">
+                                <button class="w3-small" mat-menu-item *ngIf="element.status === 'reception'"
+                                    routerLink="generate-dispatch" (click)="generateDispatch(element)">
                                     <mat-icon>local_shipping</mat-icon>
                                     Generar despacho
                                 </button>
