--- a/src/app/main/pages/initial-evaluations/init-eval-reports/init-eval-reports.component.scss
+++ b/src/app/main/pages/initial-evaluations/init-eval-reports/init-eval-reports.component.scss
@@ -14,6 +14,6 @@
     border-radius: 5px;
 }
 
-::ng-deep .mat-form-field-wrapper {
-    padding-bottom: 0px !important;
-}
+// ::ng-deep .mat-form-field-wrapper {
+//     padding-bottom: 0px !important;
+// }
