--- a/src/assets/css/meraki.scss
+++ b/src/assets/css/meraki.scss
@@ -59,6 +59,10 @@
                 margin: 12px 0px 0px 0px;
             }
         }
+
+        &__search .mat-form-field-wrapper {
+            padding-bottom: 0px !important;
+        }
     }
 }
 
