--- a/src/app/main/pages/quality/internal-events/internal-events.component.html
+++ b/src/app/main/pages/quality/internal-events/internal-events.component.html
@@ -7,6 +7,8 @@
     </div>
 
     <div class="container-body">
+        <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
+
         <mat-card class="card">
             <h3 class="title-form">Registros de eventos de calidad - Internos</h3>
             <div >
@@ -14,7 +16,7 @@
                    
                     <mat-form-field appearance="outline" id="result" class="container-form__area">
                         <mat-label>Descripcion</mat-label>
-                          <input  matInput type="number" placeholder="Descripcion" formControlName="description"                         
+                          <input  matInput type="text" placeholder="Descripcion" formControlName="description"                         
                           >
                         <mat-error *ngIf="internalForm.controls['description'].errors">
                             Campo <strong>requerido.</strong>
@@ -34,7 +36,7 @@
 
                         <mat-form-field appearance="outline" id="result" class="container-form__work--input">
                             <mat-label>Taller</mat-label>
-                            <input matInput type="number" placeholder="taller" formControlName="workShop" />
+                            <input matInput type="text" placeholder="taller" formControlName="workShop" />
                             <mat-error *ngIf="internalForm.controls['workShop'].errors">
                                 Campo <strong>requerido.</strong>
                             </mat-error>
@@ -48,12 +50,13 @@
                             </mat-error>
                         </mat-form-field>
                     </div>
+
                     <br />
                     <mat-form-field appearance="outline" id="result" class="container-form__area">
                         <mat-label>Detalle de evento</mat-label>
-                          <input  matInput type="number" placeholder="Detalle del evento" formControlName="eventoDetail"                         
+                          <input  matInput type="text" placeholder="Detalle del evento" formControlName="eventDetail"                         
                           >
-                        <mat-error *ngIf="internalForm.controls['eventoDetail'].errors">
+                        <mat-error *ngIf="internalForm.controls['eventDetail'].errors">
                             Campo <strong>requerido.</strong>
                         </mat-error>
                     </mat-form-field>
@@ -61,12 +64,14 @@
 
                     <h3 class="container-form__title-image">Imagen general</h3>
 
-                    <div class="dropzone" appDropzone (hovered)="toggleHover($event)" (dropped)="onDrop($event)"
-                    [class.hovering]="isHovering">
-                    <p>Arrastrar imágenes</p>
+                    <div class="dropzone" appDropzone 
+                        (hovered)="toggleHoverGeneral($event)" (dropped)="onDropGeneral($event)"
+                        [class.hovering]="isHoveringGeneral">
+                        <p>Arrastrar imágenes</p>
                         <div class="file">
                             <label class="file-label">
-                                <input class="file-input" type="file" (change)="onDrop($event.target.files)">
+                                <input class="file-input" type="file" 
+                                       (change)="onDropGeneral($event.target.files)">
                                 <span class="file-cta">
                                     <span class="file-label">
                                         Seleccione una imagen
@@ -76,20 +81,23 @@
                         </div>
                     </div>
                     <h3>Uploads</h3>
-
-                    <div *ngFor="let file of files">
-                        <app-upload-task [file]="file" [pathStorage]="pathStorage" (onNewImage)="addNewImage($event)">
+                    <div *ngFor="let file of filesGeneral">
+                        <app-upload-task 
+                          [file]="file" [pathStorage]="pathStorageGeneral"
+                         (onNewImage)="addNewImageGeneral($event)">
                         </app-upload-task>
                     </div>
 
                     <h3 class="container-form__title-image">Imagen de detalle</h3>
 
-                    <div class="dropzone" appDropzone (hovered)="toggleHover($event)" (dropped)="onDrop($event)"
-                    [class.hovering]="isHovering">
-                    <p>Arrastrar imágenes</p>
+                    <div class="dropzone" appDropzone (hovered)="toggleHoverDetail($event)" 
+                        (dropped)="onDropDetail($event)"
+                        [class.hovering]="isHoveringDetail">
+                        <p>Arrastrar imágenes</p>
                         <div class="file">
                             <label class="file-label">
-                                <input class="file-input" type="file" (change)="onDrop($event.target.files)">
+                                <input class="file-input" type="file" 
+                                       (change)="onDropDetail($event.target.files)">
                                 <span class="file-cta">
                                     <span class="file-label">
                                         Seleccione una imagen
@@ -100,25 +108,34 @@
                     </div>
                     <h3>Uploads</h3>
 
-                    <div *ngFor="let file of files">
-                        <app-upload-task [file]="file" [pathStorage]="pathStorage" (onNewImage)="addNewImage($event)">
+                    <div *ngFor="let file of filesDetail">
+                        <app-upload-task [file]="file" [pathStorage]="pathStorageDetail" 
+                        (onNewImage)="addNewImageDetail($event)">
                         </app-upload-task>
                     </div>
                     
                     <div class="container-form__uploadXlx">
                         <h3 class="">Archivo adicional</h3>
-                        <p style="color:#0064EA;">ZBI_OPS_ORDSER_MQH (11-52-04).xlsx </p>
-                        <input #fileInput2 style="display: none" type="file" (change)=" onFileSelected($event)" accept=".xls,.xlsx"
-                            id="fileInput2">
-                            <br>
-                        <button type="file" aria-label="add" mat-button class="container-form__uploadXlx--btn-add" accept=".csv,.xlsx"
-                            (click)="fileInput2.click()">
-                            <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
-                            ADJUNTAR 
-                        </button>
-                    </div>  
-                    
-                    <button aria-label="add" mat-button class="container-form__btn-save" >
+                        <p *ngIf="fileSelect" style="color:#0064EA;">{{nameFileSelect}} </p>
+                        <div >
+                            <input #fileInput2 style="display: none" type="file" 
+                                   id="fileInput2"
+                                   (change)="uploadFiles($event)" accept=".xls,.xlsx"
+                                   >
+                                   <br>
+                            <button type="file" aria-label="add" mat-button class="container-form__uploadXlx--btn-add"
+                                    accept=".csv,.xlsx" 
+                                (click)="fileInput2.click()">
+                                <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
+                                ADJUNTAR 
+                            </button>                            
+                        </div>                                              
+                    </div>                     
+                                       
+                    <button aria-label="add" mat-button class="container-form__btn-save" 
+                    [disabled]='internalForm.invalid'
+                    (click)="save()"
+                    >
                         GUARDAR
                     </button>
 
